[pom] Try adding java.util unamed to pom instead