@@ -116,4 +116,25 @@
     </plugins>
   </build>
 
+        <profile>
+            <id>jdk16on</id>
+            <activation>
+                <jdk>[16,)</jdk>
+            </activation>
+            <build>
+                <pluginManagement>
+                    <plugins>
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-surefire-plugin</artifactId>
+                            <configuration>
+                                <fork>true</fork>
+                                <argLine>${argLine} -Djdk.attach.allowAttachSelf --add-opens java.base/java.util=ALL-UNNAMED</argLine>
+                            </configuration>
+                        </plugin>
+                    </plugins>
+                </pluginManagement>
+            </build>
+        </profile>
+
 </project>
